--- a/API/package.json
+++ b/API/package.json
@@ -16,10 +16,12 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "mongoose": "^7.3.2",
     "node-fetch": "^2.6.7",
     "onesignal-node": "^3.4.0",
     "path": "^0.12.7",
-    "serve-index": "^1.9.1"
+    "serve-index": "^1.9.1",
+    "socket.io": "^4.7.3"
   }
 }
